Adjust image margin to avoid author to overflow

--- a/sixsq.css
+++ b/sixsq.css
@@ -455,6 +455,7 @@ img {
 .list_news img {
 	float: left;
 	margin-right: 20px;
+    margin-bottom: 15px;
 }
 
 .list_news a.title,
